--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>first code</title>
-  </head>
-  <body><h2>Hello world</h2></body>
+<head>
+  <title>InterviewBuddy - ChatBuddy</title>
+</head>
+<body>
+
+  <h2>InterviewBuddy (ChatBuddy)</h2>
+  <hr>
+
+  <p><b>Bot:</b> 👋 Hi! I'm ChatBuddy. Tell me about yourself.</p>
+  <p><b>You:</b> I am a final year student preparing for interviews.</p>
+  <p><b>Bot:</b> That’s great! Remember to highlight your strengths and projects.</p>
+
+  <hr>
+  <h3>Type your answer here:</h3>
+  <form>
+    <label>Your Response:</label><br>
+    <textarea rows="4" cols="50"></textarea><br><br>
+    <input type="submit" value="Send">
+  </form>
+
+</body>
 </html>
